resolved title overflow on large screen sizes

--- a/recipes/Mochi_muffins.css
+++ b/recipes/Mochi_muffins.css
@@ -426,7 +426,7 @@ body {
     }
 
     .hero__title{
-        top:26rem;
+        top:23rem;
     }
 
     .hero__image {
